--- a/Practica#3/Lab3.html
+++ b/Practica#3/Lab3.html
@@ -1,21 +1,21 @@
 <html>
     <head>
         <script src="Diccionario.js"></script>
+        <meta charset = "UTF-8"/>
         <title>
             Laboratorio # 3
         </title>
     </head>
     <body>
             
-            <form action="/action_page.php">
-              Llave:<br>
-              <input type="text" name="txtLlave" id = "txtLlave">
-              <br>
-              Valor:<br>
-              <input type="text" name="txtValor" id = "txtValor">
-              <br><br>
-              <input type="button" value="Enviar" onclick= "IngresarValores('txtLlave','txtValor')";>
-              <input type="radio" name = "opciones">
+            <form action="Diccionario.js" method="get">
+                    Llave:<br>
+                    <input type="text" name="txtLlave" id = "txtLlave">
+                    <br>
+                    Valor:<br>
+                    <input type="text" name="txtValor" id = "txtValor">
+                    <br><br>
+                    <input type="button" value="Enviar" onclick= "IngresarValores('txtLlave','txtValor')";>
             </form> 
             </body>
 </html>
