Mostrar objeto en JSON.

--- a/Practica#3/Lab3.html
+++ b/Practica#3/Lab3.html
@@ -16,6 +16,14 @@
                     <input type="text" name="txtValor" id = "txtValor">
                     <br><br>
                     <input type="button" value="Enviar" onclick= "IngresarValores('txtLlave','txtValor')";>
+                    <br><br>
+                    <input type="button" value="Mostrar en JSON" onclick= "mostrarDiccionario()";>
+
+                    <textarea id="myTextarea" rows="10" cols="50">       
+                        Resultado:                 
+                        </textarea>
+
+
             </form> 
             </body>
 </html>
